# youloud-parser

./: .black  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
youloud_parser/: album.py  classes.py  consts.py  download.py  exceptions.py  files.py  main.py  parser.py  parser_io.py
