[tool.poetry]
name = "youloud-parser"
version = "0.2.3"
description = ""
authors = ["nshib <nshib54321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests-html = "^0.10.0"
rich = "^13.7.1"
inquirer = "^3.4.0"
pyppeteer = {git = "https://github.com/pyppeteer/pyppeteer", rev = "dev"}
lxml-html-clean = "^0.2.0"


[tool.poetry.group.dev.dependencies]
auto-py-to-exe = "^2.44.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
