[tool.poetry]
name = "youloud-parser"
version = "0.2.5"
description = ""
authors = ["nshib <nshib54321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
requests-html = "^0.10.0"
rich = "^13.7.1"
inquirer = "^3.4.0"
pyppeteer = "^2.0.0"
lxml-html-clean = "^0.2.0"
pyfiglet = "^1.0.2"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
auto-py-to-exe = "^2.44.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
